--- a/sales.ipynb
+++ b/sales.ipynb
@@ -99,6 +99,24 @@
     ").orderBy(\"date\")\n",
     "daily_sales.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "df850ee7-fded-4d50-ad9d-cfa5018ad564",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sales_df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"sales_data_delta\")"
+   ]
   }
  ],
  "metadata": {
